@@ -5,6 +5,7 @@ DEV:
 -Subdomains[TODO]
 -NativeStat improvements
 -Executor clean-up
+-64bit integer conversions in SuperString
 
 1105.13:
 -Special macros for returning OnLoad status
